[package]
name = "ascvg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
iced = {version = "0.7.0", features = ["svg", "canvas"]}
iced_native = "0.8.0"
rfd = "0.11.0"
ropey = "1.6.0"
svgbob = "0.6.7"
